# discordbot-Kh1vella

./: .gitignore  Cargo.toml  Dockerfile  khivella_prompt.txt  nixpacks.toml
src/: api.rs  handler.rs  main.rs  types.rs
src/commands/: admin.rs  mod.rs  moderation.rs  music.rs  utility.rs
src/db/: moderation.rs
src/services/: moderation.rs
src/utils/: ai.rs  checks.rs  embeds.rs  mod.rs
