[package]
name = "kh1evbot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12", default-features = false, features = ["client", "standard_framework", "voice", "rustls_backend", "gateway", "model", "cache"] }
songbird = { version = "0.4.3", features = ["builtin-queue", "rustls"] }
tokio = { version = "1.34", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
