[package]
name = "kh1evbot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12", default-features = false, features = ["client", "standard_framework", "voice", "rustls_backend", "gateway", "model", "cache"] }
songbird = { version = "0.4.3", features = ["builtin-queue", "rustls"] }
tokio = { version = "1.34", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
poise = "0.6"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
sysinfo = "0.39.3"
uuid = { version = "1.23.2", features = ["v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
sqlx = { version = "0.9.0", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "macros"] }
